# physic-model

./: Ball.hpp  Block.hpp  CMakeLists.txt  Cannon.hpp  Header.hpp  Land.hpp  Object.hpp  README.md  main.cpp  numbers.h  numbers.hpp
images/: Ball.png.url  main.cpp
